Fix 'Tags within Split transaction not reporting correctly'

BUG:406403
FIXED-IN:5.0.8